--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,7 +39,9 @@
 
     <nav>
       <div class="logo">
-        <img src="./images/LOGOBLANCO.png" alt="Logo" width="100px" />
+        <a href="https://marladelvic.github.io/Pagina-Movistar/HTML/"> 
+          <img src="./images/LOGOBLANCO.png" alt="Logo" width="100px" />
+        </a>
       </div>
 
       <div class="menu">
@@ -111,8 +113,8 @@
         </div>
         
         <div class="solicitud">
-            <p>Línea Movil Nueva</p>
-            <p>Cambiate a 4G</p>
+            <p>Línea Móvil Nueva</p>
+            <p>Cámbiate a 4G</p>
             <p>Movistar Enlace</p>
         </div>
     </div>
